workspaces/optic-engine/src/commands/snapshots/optic_engine__commands__endpoint__test__can_handle_add_path_parameter__conflicting_path_result.snap
---
source: workspaces/optic-engine/src/commands/endpoint.rs
expression: conflicting_path_result.unwrap_err()
---
Validation(
    "Command failed validation: path parameter must not already exist, \"AddPathParameter(AddPathParameter { path_id: \\\"path_3\\\", parent_path_id: \\\"path_1\\\", name: \\\"notTodoId\\\" })\"",
)
